--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <!-- تگ model-viewer برای نمایش مدل 3D -->
     <model-viewer 
-        src="https://s31.picofile.com/d/8474498668/e81ceeb8-524e-43dd-99ba-323b57767ce1/untitled4.glb" 
+        src="untitled4.glb" 
         alt="مدل 3D در AR" 
         ar 
         ar-modes="scene-viewer webxr quick-look" 
